--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,15 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Hello, I am currently an Implementation Consultant at <a href="https://www.fastenterprises.com/">Fast Enterprises</a> in Olympia, Washington. I work alongside the Washington Department of Revenue on production support which involves developing feature requests and bug fixes.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>I graduated from the <a href="https://www.cs.wisc.edu/">University of Wisconsin - Madison</a> in May 2021 with a B.S. in Computer Science. While in college, I worked at the <a href="https://csl.cs.wisc.edu/docs/csl/2012-08-16-staff/">Computer Systems Lab</a> as a Lead Student System Administrator.</p>
                 </div>
             </div>
         </div>
