Links in about section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hello, I am currently an Implementation Consultant at <a href="https://www.fastenterprises.com/">Fast Enterprises</a> in Olympia, Washington. I work alongside the Washington Department of Revenue on production support which involves developing feature requests and bug fixes.</p>
+                    <p>Hello, I am currently an Implementation Consultant at Fast Enterprises in Olympia, Washington. I work alongside the Washington Department of Revenue on production support which involves developing feature requests and bug fixes.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>I graduated from the <a href="https://www.cs.wisc.edu/">University of Wisconsin - Madison</a> in May 2021 with a B.S. in Computer Science. While in college, I worked at the <a href="https://csl.cs.wisc.edu/docs/csl/2012-08-16-staff/">Computer Systems Lab</a> as a Lead Student System Administrator.</p>
+                    <p>I graduated from the University of Wisconsin - Madison in May 2021 with a B.S. in Computer Science. While in college, I worked at the Computer Systems Lab as a Lead Student System Administrator.</p>
                 </div>
             </div>
         </div>
