--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -72,8 +72,8 @@ hr.star-primary {
 }
 
 hr.star-primary:after {
-    color: #{{ site.color.secondary }};
-    background-color: #fff;
+    color: #fff
+    background-color: #{{ site.color.secondary-dark }};
 }
 
 .img-centered {
