--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,6 +27,14 @@
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
+                    <li class="page-scroll">
+                        <a
+                          target="_blank"
+                          class="align-middle link-primary mr-2 mr-lg-0 ml-lg-2"
+                          href="/static/Resume.pdf"
+                          >Resume</a
+                        >
+                      </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
