--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -228,7 +228,7 @@ section.success {
     width: 100%;
     height: 20px;
     margin-top: -12px;
-    text-align: center;
+    text-align: left;
     font-size: 20px;
     color: #fff;
 }
@@ -418,7 +418,7 @@ footer .footer-below {
     min-height: 100%;
     border: 0;
     border-radius: 0;
-    text-align: center;
+    text-align: left;
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
