--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -22,19 +22,19 @@
                             <ul class="list-inline item-details">
                                 {% if post.client %}
                                     <li>Client:
-                                        <strong><a href={{ post.link }}>{{ post.client }}</a>
+                                        <strong><a href={{ post.link }} target="_blank" rel="noopener noreferrer">{{ post.client }}</a>
                                         </strong>
                                     </li>
                                 {% endif %}
                                 {% if post.project-date %}
                                     <li>Date:
-                                        <strong><a href={{ post.link }}>{{ post.project-date }}</a>
+                                        <strong><a href={{ post.link }} target="_blank" rel="noopener noreferrer">{{ post.project-date }}</a>
                                         </strong>
                                     </li>
                                 {% endif %}
                                 {% if post.category %}
                                     <li>Service:
-                                        <strong><a href={{ post.link }}>{{ post.category }}</a>
+                                        <strong><a href={{ post.link }} target="_blank" rel="noopener noreferrer">{{ post.category }}</a>
                                         </strong>
                                     </li>
                                 {% endif %}
