--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -278,7 +278,6 @@ section.success {
       max-width: 23.5%;
     }
   } */
-
 .btn-outline {
     margin-top: 15px;
     border: solid 2px #fff;
@@ -418,10 +417,14 @@ footer .footer-below {
     min-height: 100%;
     border: 0;
     border-radius: 0;
-    text-align: left;
+    text-align: center;
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
+}
+
+.modal-description {
+    text-align: left;
 }
 
 .portfolio-modal .modal-content h2 {
@@ -436,6 +439,7 @@ footer .footer-below {
 
 .portfolio-modal .modal-content .item-details {
     margin: 30px 0;
+    text-align: center;
 }
 
 .portfolio-modal .close-modal {
