--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -15,10 +15,12 @@
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            {% if post.description %}
-                                <p>{{ post.description }}</p>
-                                
-                            {% endif %}
+                            <div class="modal-description">
+                                {% if post.description %}
+                                    <p>{{ post.description }}</p>
+                                    
+                                {% endif %}
+                            </div>
                             <ul class="list-inline item-details">
                                 {% if post.client %}
                                     <li>Client:
@@ -39,6 +41,7 @@
                                     </li>
                                 {% endif %}
                             </ul>
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
