added descriptions for whats up is down. changed twitter photo.

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -35,7 +35,7 @@
                                     </li>
                                 {% endif %}
                                 {% if post.category %}
-                                    <li>Service:
+                                    <li>Technology:
                                         <strong><a href={{ post.link }} target="_blank" rel="noopener noreferrer">{{ post.category }}</a>
                                         </strong>
                                     </li>
