Updated with new employment info, updated profile pic

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,19 +1,28 @@
- <!-- About Section -->
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hello, I am currently an Implementation Consultant at Fast Enterprises in Olympia, Washington. I work alongside the Washington Department of Revenue on production support which involves developing feature requests and bug fixes.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>I graduated from the University of Wisconsin - Madison in May 2021 with a B.S. in Computer Science. While in college, I worked at the Computer Systems Lab as a Lead Student System Administrator.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+<!-- About Section -->
+<section class="success" id="about">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>About</h2>
+        <hr class="star-light" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-lg-offset-2">
+        <p>
+          Hello, I am currently a Senior Software Engineer at Capital One in
+          Chicago, Illinois. I work on the Card Income Team which maintains
+          applications that manage customer income updates and income
+          veriifcation.
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <p>
+          I graduated from the University of Wisconsin - Madison in May 2021
+          with a B.S. in Computer Science. While in college, I worked at the
+          Computer Systems Lab as a Lead Student System Administrator.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
