--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,11 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <img class="img-responsive" src="img/profile.png" alt="profile-pic" />
+        <img
+          class="img-responsive profile-pic"
+          src="img/new-profile-pic.jpeg"
+          alt="profile-pic"
+        />
         <div class="intro-text">
           <span class="name">{{ site.title }}</span>
           <hr class="star-light" />
