--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -171,11 +171,10 @@ header .intro-text .skills {
     border: 0;
 }
 
-/* filepath: /Users/simontheuer/projects/SimonT321.github.io/assets/css/main.css */
 .profile-pic {
     border-radius: 50%;
-    width: 200px; /* Adjust the size as needed */
-    height: 200px; /* Adjust the size as needed */
+    width: 200px; 
+    height: 200px;
     object-fit: cover;
   }
 
